fixed vertical align in mylistings table and also added create butonn on the side

--- a/server/public/css/master.css
+++ b/server/public/css/master.css
@@ -1417,7 +1417,7 @@ a.box:active {
     border: 1px solid #d3d6db;
     border-width: 0 0 1px;
     padding: 8px 10px;
-    vertical-align: top; }
+    vertical-align: middle; }
     .table td.is-icon,
     .table th.is-icon {
       padding: 5px;
@@ -1459,7 +1459,8 @@ a.box:active {
     text-align: left; }
   .table tr:hover {
     background-color: #f5f7fa;
-    color: #111; }
+    color: #111;
+    cursor: pointer; }
   .table thead td,
   .table thead th {
     border-width: 0 0 2px;
